# walkforward

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_backtest.py  test_metrics.py  test_pnl.py  test_returns.py  test_smoke.py  test_walkforward.py
walkforward/: __init__.py  engine.py
